# axum_headers_api

./: Cargo.toml  README.md
public/css/: style.css
src/: handlers.rs  main.rs
templates/: base.html
