[package]
name = "axum_headers_api"
version = "0.1.0"
edition = "2018"
author = "l-const"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
axum = "0.2.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0"}
serde_json = { version = "1.0"}